<resources>
    <string name="nav_library">图书馆</string>
    <string name="nav_more">更多</string>
    <string name="more_title">更多</string>
    <string name="library_title">图书馆</string>
    <string name="library_search">搜索</string>
    <string name="library_view">视图</string>
    <string name="library_filter">筛选</string>
    <string name="library_back">返回</string>
    <string name="library_unnamed_folder">未归类</string>
...
